# gpx2kml

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: publish-to-pypi.yml  test.yml
demo/: demo.py
src/gpx2kml/: gpx.py  kml.py  util.py
test/: test_gpx.py  test_kml.py  test_util.py
test/archive/: 2023-08-03-121238.gpx
test/gpx/: 2023-08-03-121238.gpx  cardioActivities.csv
test/kml/: 2023-08.kml
test/kml_combine/: test.kml
