[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpx2kml"
version = "0.1.4"
authors = [
  { name="Kan Fu", email="fukan.thu@gmail.com" },
]
description = "A library to combine gpx files exported from runkeeper.com to kml files"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kan-fu/gpx2kml"
"Bug Tracker" = "https://github.com/kan-fu/gpx2kml/issues"

[project.optional-dependencies]
dev = [
    "pytest",
  "mypy",
  "ruff",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths =  "test"

[tool.mypy]
check_untyped_defs = true

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]


[project.scripts]
gpx2kml = "gpx2kml.util:gpx2kml_cmd"
